remove auto brightness cause we have no sensor (currently)

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -22,7 +22,7 @@
 <resources>
     <!-- Flag indicating whether we should enable the automatic brightness in Settings.
          config_hardware_automatic_brightness_available is not set, so we will use software implementation -->
-    <bool name="config_automatic_brightness_available">true</bool>
+    <bool name="config_automatic_brightness_available">false</bool>
 
     <bool name="config_animateScreenLights">false</bool>
 
@@ -37,49 +37,49 @@
          Zone N:        array[N - 1] <= LUX < array[N]
          Zone N + 1:    array[N] <= LUX < infinity
 
-         Must be overridden in platform specific overlays -->
+         Must be overridden in platform specific overlays 
     <integer-array name="config_autoBrightnessLevels">
         <item>200</item>
         <item>400</item>
         <item>1000</item>
         <item>3000</item>
-    </integer-array>
+    </integer-array> -->
 
     <!-- Array of output values for LCD backlight corresponding to the LUX values
          in the config_autoBrightnessLevels array.  This array should have size one greater
          than the size of the config_autoBrightnessLevels array.
-    -->
+    
     <integer-array name="config_autoBrightnessLcdBacklightValues">
         <item>35</item>
         <item>55</item>
         <item>70</item>
         <item>90</item>
         <item>210</item>
-    </integer-array>
+    </integer-array> -->
 
     <!-- Array of output values for button backlight corresponding to the LUX values
          in the config_autoBrightnessLevels array.  This array should have size one greater
          than the size of the config_autoBrightnessLevels array.
-    -->
+    
     <integer-array name="config_autoBrightnessButtonBacklightValues">
         <item>255</item>
         <item>255</item>
         <item>0</item>
         <item>0</item>
         <item>0</item>
-    </integer-array>
+    </integer-array> -->
 
     <!-- Array of output values for keyboard backlight corresponding to the LUX values
          in the config_autoBrightnessLevels array.  This array should have size one greater
          than the size of the config_autoBrightnessLevels array.
-    -->
+    
     <integer-array name="config_autoBrightnessKeyboardBacklightValues">
         <item>5</item>
         <item>0</item>
         <item>0</item>
         <item>0</item>
         <item>0</item>
-    </integer-array>
+    </integer-array> -->
     
     <!-- Component name of the default wallpaper. This will be ImageWallpaper if not 
          specified -->
